[BUGFIX]html section tag; position alignment

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -8,16 +8,18 @@
 }
 
 button {
-    position: absolute;
+    position: relative;
     font-size: 18px;
     background-color: #FF5A5F;
     color: #FFFFFF;
     height: 48px;
     width: 20%;
+    text-align: center;
     border-radius: 4px;
     border-style: none;
     top: 15%;
     right: 30px;
+    float: right;
 }
 
 button:hover {
